# AWSModel

./: .gitignore  Makefile  README.md  config-example.yaml  pyproject.toml
docs/: Design.md
src/: asset.py  boto.py  config.py  main.py  mongo.py
